k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  selector:
    app: himatsumu-ai
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
