k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: himatsumu-ai-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ai-himatsumu.kirimaru.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 8000
